index.css
* {
    box-sizing: border-box;
}

body {
    margin: 0; 
    font-family: "Hanken Grotesk", Arial, sans-serif;
    background-color: #282726;
    color: #D9D9D9;
    padding: 20px;
    height: 100vh;
    display: flex;
    justify-content: center;
}

header {
    text-align: center; 
}

header > h1 {
    font-size: 1.25rem;
    font-weight: 500;
    color: #F9F4DA;
    margin-bottom: 5px;
}

header > p {
    font-size: 1rem;
    font-weight: 300;
    margin: 0 40px;
    max-width: 400px;
}

section.game-status {
    background-color: #10A95B;
    max-width: 400px;
    text-align: center;
    color: #F9F4DA;
    margin: 10px auto;
    border-radius: 5px;
}

section.game-status > h2 {
    margin: 10px 0 5px 0;
    font-weight: 500;
}

section.game-status > p {
    margin: 0 0 5px 0;
}

section.languages {
    margin: 20px auto;
    display: flex;
    flex-wrap: wrap;
    gap: 5px;
    justify-content: center;
    max-width: 400px;
}

span.badge {
    border-radius: 3px;
    padding: 5px;
    position: relative;
}

span.badge.lost::before {
    content: "💀";
    position: absolute;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
    width: 100%;
    font-size: 0.85rem;
    top: 0;
    left: 0;
    background-color: rgba(0,0,0,0.7);
}

section.word {
    display: flex;
    justify-content: center;
    gap: 2px;
}

section.word > span {
    height: 40px;
    width: 40px;
    background-color: #323232;
    display: flex;
    justify-content: center; 
    align-items: center;
    font-siZe: 1.5rem;
    font-weight: 500;
    border-bottom: 1px solid #F9F4DA;
}

section.keyboard {
    display: flex;
    flex-wrap: wrap;
    gap: 8px;
    justify-content: center;
    max-width: 500px;
    max-height: 170px;
    margin-top: 40px;
}

section.keyboard > button {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 40px;
    width: 40px;
    background-color: #FCBA29;
    border-radius: 3px;
    border: 1px solid #D9D9D9;
    font-size: 1rem;
    font-weight: 600;
}

section.keyboard > button.correct {
    background-color: #10A95B
}

section.keyboard > button.wrong {
    background-color: #EC5D49   
}

button.new-game {
    background-color: #11B5E5;
    border: 1px solid #D7D7D7;
    border-radius: 3px;
    width: 225px;
    height: 40px;
    padding: 6px 12px;
    display: block;
    margin-inline: auto;
    margin-top: 40px;
    font-weight: 600;
    cursor: pointer;
}

